# agent-communication

./: .env.sample  README.md  ollama_agent.py  pyproject.toml
src/: langfuse_trace.py  main.py  ollama_agent.py  utils.py
